# otii-tcp-client-python

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.py
examples/: .gitignore  ampere_mode_measurement.py  at_commands.py  basic_measurement.py  battery_emulator.py  compare_with_saved.py  control_switchboard.py  dcdc_efficiency_analysis.py  example_basic_function_check.py  example_check_create_project.py  example_enable_channels_and_record.py  example_energy_harvesting.py  example_get_channel_data_and_count.py  example_wx_python.py  example_wx_python2.py  import_log.py  jenkins.py  multiple_devices.py  power_sweep.py  start_otii_server.py  sync_with_log.py  user_management.py  voltage_sweep.py
examples/otii2/: example_basic_function_check.py  example_check_create_project.py  example_config.py  example_enable_channels_and_record.py  example_energy_harvesting.py
otii_tcp_client/: __init__.py  arc.py  battery_emulator.py  otii.py  otii_client.py  otii_connection.py  otii_control.py  otii_exception.py  project.py  recording.py
tests/: battery_emulator.py
