[build-system]
requires = ["setuptools>=75.8.2"]
build-backend = "setuptools.build_meta"

[project]
name = "otii_tcp_client"
version = "1.0.12"
authors = [
  { name="Qoitech AB", email="support@qoitech.com" },
]
description = "Qoitech Otii tcp client library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "python-dateutil",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/qoitech/otii-tcp-client-python"

[tool.setuptools.package-data]
otii_tcp_client = ["py.typed"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_calls = true
disallow_untyped_defs = true
